# zkonvif

./: .gitignore  .vimrc  README.md
3rd/libvisca-1.1.0/visca/: CircQue.c  CircQue.h  Makefile.am  libvisca.c  libvisca.h  libvisca_avr.c  libvisca_hi3531.c  libvisca_hi3531_new.c  libvisca_posix.c  libvisca_win32.c
libzkonvif/: ChangeLog  Makefile.am  README  bootme.sh  configure.ac  onvif.h  wsa5.h
libzkonvif/gsoap/: stdsoap2.h
libzkonvif/include/: zk_wsdd.h
libzkonvif/libzkreg/: Makefile.am  lcreg.h  main.cpp
libzkonvif/src/: Makefile.am  Makefile.in  README  zk_wsdd.cpp
libzkonvif/src/linux/: sysperf.cpp  sysperf.h
libzkonvif/src/win/: sysperf.cpp  sysperf.h
libzkonvif/test/: Makefile.am  MyDevice.cpp  MyDevice.h  MyDeviceDiscovery.cpp  MyDeviceDiscovery.h  MyEvent.cpp  MyEvent.h  MyPtz.cpp  MyPtz.h  PtzControling.cpp  PtzControling.h  ZoomValueConvert.cpp  ZoomValueConvert.h  myservice.inf.h  polyfit.cpp  polyfit.h  test_client_devicemgrt.cpp  test_client_dm.cpp  test_client_dm.event.cpp  test_client_dm.ptz.cpp  test_normal_service.cpp  test_target_dm.cpp
libzkonvif/wsdl/: bf-2.xsd  deviceio.wsdl  devicemgmt.wsdl  event.wsdl  event.zk.wsdl  media.wsdl  ptz.wsdl  recording.wsdl  zonekey.xsd
libzkonvif/wsdl2/: event.wsdl  ptz.wsdl
wsdiscovery/: Makefile.am  bootme.sh  configure.ac  main.cpp  server.impl.cpp
zkdm/: Makefile.am  README  configure.ac  uninstall_zkdm.bat
zkdm/3rd/: libvisca-1.1.0.zk.tar.bz2
zkdm/pong/: Makefile.am  commdef.h  ping.c  pong.c  run_pong.sh  target_info
zkdm/ptz/: KVConfig.cpp  KVConfig.h  Makefile.am  README  ZoomValueConvert.cpp  ZoomValueConvert.h  polyfit.cpp  polyfit.h  ptz.cpp  ptz.h  serial_win32.cpp  serial_win32.h  visca.cpp  visca.h
zkdm/python/: zkdm.rar
zkdm/python/package/: Changed  README  extra.py  install.py  scope.json  scope.json.sample  update.txt  uty_au.py
zkdm/python/package/autoupdate/: conf_srv.py
zkdm/python/package/common/: SysInfo.py  conf_mc.py  reght.py  reght_client.py  tokens.json.sample  utils.py  uty_log.py
zkdm/python/package/dm/: DMServer.py  DMWinService.py  LocalConfig.py  chk_info.py  ping.py  pping.py  reg_dm.py  td.py  test_udp.py  test_udp_client.py
zkdm/python/package/log/: LogServer.py  dbhlp.py  help.html  logs.db
zkdm/python/package/ptz/: ArmPtz.py  PtzWrap.py
zkdm/python/package/recording/: Check_CardLive.py  ClassSchedule.py  CommonHelper.py  DiskManagement.py  LivingServer.py  RecordingCommand.py
zkdm/python/zkdm/: README  install.py
zkdm/python/zkdm-setup/: README  setup.bat  total_setup.bat
zkdm/python/zkdm-setup/debugging Dm-exe/: total_setup.bat
zkdm/python/zkdm-setup/released Ptz -exe(syn)/: setup.bat
zkdm/python/zkdm-setup/zkdm/: INSTALL NOTE
zkdm/python/zkdm/PtzCheck/: Ptz 配置检测.doc  ptzA.bat  ptzC.bat  ptzZ.bat
zkdm/python/zkdm/autoupdate/: README  au.py  checkVersion.py  conf_mc.py  global_conf.json  local  version
zkdm/python/zkdm/card/: CardServer.py  help.html
zkdm/python/zkdm/common/: Log.py  SysInfo.py  WsdlLoader.py  global_conf.json.sample  ns_query.py  reght.py  reght_client1.py  tokens.json  tokens.json.sample  utils.py  uty_log.py  uty_token.py  zkQueryProxy.py  zkRegProxy.py
zkdm/python/zkdm/config/: config.py  config_utils.py  index  mjs.js  stdlib.py  test.config
zkdm/python/zkdm/dm/: DMServer.py  DMServer2.py  DMWinService.py  DMWinService2.py  DMWinService3.py  DbOp.py  LocalConfig.py  README  ServicesManager.py  chk_info.py  config.json  doc  help.html  install_dm_winservice.bat  ping.py  pping.py  proxied_hosts.db  regHb.py  reg_dm.py  reg_host.py  test_ping.py  test_select.c  test_udp_server.py
zkdm/python/zkdm/event/: EventServer.py  README  help.html  test.config
zkdm/python/zkdm/host/: HostUtils.py  README  Stat.py  config.json
zkdm/python/zkdm/living/: LivingCommand.py  LivingServer.py  help.html
zkdm/python/zkdm/log/: .LogServer.py.swp  .dbhlp.py.swo  .dbhlp.py.swp  LogServer.py  README  dbhlp.py  help.html  logs.db
zkdm/python/zkdm/nameservice/: README  dbhlp.py  portalocker.py  query.py  register.py  server.py
zkdm/python/zkdm/ns/: README  dbext.py  dbhlp.py  pping.py  reg.py  target.py  test_db.py
zkdm/python/zkdm/others/: HostUtils.py  Stat.py  help.html
zkdm/python/zkdm/ptz/: .MyService.py.swp  .PtzServer.py.swk  .PtzServer.py.swl  .PtzServer.py.swm  .PtzServer.py.swn  .PtzServer.py.swp  .PtzServiceTest.py.swp  .PtzWinService.py.swl  .PtzWinService.py.swn  .PtzWrap.py.swk  .PtzWrap.py.swl  .PtzWrap.py.swn  .TestPtz.py.swk  .TestPtz.py.swm  .TestPtz.py.swn  .TestPtz.py.swo  .help.html.swo  .help.html.swp  .test_ptz.sh.swp  .win32serviceutil.py.swp  ArmPtz.py  Muiti-threading.py  PtzServer.py  PtzWinService.py  PtzWrap.py  PtzWrap_py.py  TestPtz.py  bd.config  card0.config  card1.config  card2.config  config.json  config_file_help.html  getLiuwenwen1  help.html  install_ptz_winservice.bat  libzkptz.so.0.0.0  ptz.config  ptz.py  ptz.student.config  (+10 more)
zkdm/python/zkdm/ptz_py/: .ptz.conf  PtzServer.py  PtzWinService.py  PtzWrap.py  PtzWrap_py.py  README  bd.config  ptz.py  remove_ptz_winservice.bat  student.config  teacher.config
zkdm/python/zkdm/recording/: CardServer.py  Check_CardLive.py  ClassSchedule.py  CommonHelper.py  DiskManagement.py  LivingServer.py  LogWriter.py  RecordingCommand.py  RecordingServer.py  cardlive_log.py  help.html
zkdm/python/zkdm/register_heartbeat/: .regHb.py.swp  .register_heartbeat.py.swp  python2.7.exe.stackdump  regHb.py  register_heartbeat.py  test.bash  test_regHb.py
zkdm/python/zkdm/sms/: sms.py  sms_client.py
zkdm/python/zkdm/tasks/: DirectoryMonitor.py  README
zkdm/python/zkdm/test/: test_ptz.py  test_sqlite3.py
zkdm/python/zkdm/tools/: README  build_ptz.py  build_recording.py  mi.txt  template.json  tmplmaker.py
zkdm/win32/zkptz/: zkptz.sln
zkdm/win32/zkptz/test_ptz/: test.cpp  test_ptz.vcxproj
zkdm/win32/zkptz/test_zkptz/: test.cpp  test_zkptz.vcxproj
zkdm/win32/zonekey_ptz_verify/: main.cpp  ptz.config  visca.cpp  visca.h  zonekey_ptz_verify.vcxproj
zkdm/zkutil/: Makefile.am  README  build_vs.bat  exports.def  utils.cpp  utils.h
(+145 files in other folders)
