lib_LIBRARIES= libzkonvif.a

AM_CXXFLAGS=${GLOBAL_CXXFLAGS} -DWITH_PURE_VIRTUAL

libzkonvif_a_SOURCES= ../soap/nsmap.cpp		\
	../soap/soapC.cpp				\
	../soap/soapDeviceBindingProxy.cpp		\
	../soap/soapDeviceBindingService.cpp	\
	../soap/soapDeviceIOBindingProxy.cpp	\
	../soap/soapDeviceIOBindingService.cpp	\
	../soap/soapMediaBindingProxy.cpp		\
	../soap/soapMediaBindingService.cpp	\
	../soap/soapPullPointSubscriptionBindingProxy.cpp		\
	../soap/soapPullPointSubscriptionBindingService.cpp	\
	../soap/soapRemoteDiscoveryBindingProxy.cpp		\
	../soap/soapRemoteDiscoveryBindingService.cpp		\
	../soap/soapwsddProxy.cpp			\
	../soap/soapwsddService.cpp	\
	../soap/duration.cpp 	\
	../soap/stdsoap2.cpp


