lib_LIBRARIES= libzkonvif.a

AM_CXXFLAGS=${GLOBAL_CXXFLAGS} -DWITH_PURE_VIRTUAL

libzkonvif_a_SOURCES= ../soap/nsmap.cpp		\
	../soap/soapC.cpp			\
	../soap/soapDeviceBindingProxy.cpp	\
	../soap/soapDeviceBindingService.cpp	\
	../soap/soapPTZBindingProxy.cpp		\
	../soap/soapPTZBindingService.cpp 	\
	../soap/soapPullPointSubscriptionBindingProxy.cpp	\
	../soap/soapPullPointSubscriptionBindingService.cpp	\
	../soap/soapRemoteDiscoveryBindingProxy.cpp		\
	../soap/soapRemoteDiscoveryBindingService.cpp		\
	../soap/soapwsddProxy.cpp		\
	../soap/soapwsddService.cpp		\
	../soap/duration.cpp 			\
	../soap/stdsoap2.cpp

